Implemented OAuth users in user handler
